Completely revised observability exercise to include more modern OTLP approach