@@ -1,6 +1,7 @@
 plugins {
     java
     id("io.quarkus")
+    id("application")
 }
 
 repositories {
@@ -15,24 +16,24 @@ val quarkusPlatformVersion: String by project
 dependencies {
     implementation(enforcedPlatform("${quarkusPlatformGroupId}:${quarkusPlatformArtifactId}:${quarkusPlatformVersion}"))
 
-    implementation("io.quarkus:quarkus-arc")
-    implementation("io.quarkus:quarkus-container-image-jib")
-    implementation("io.quarkus:quarkus-hibernate-validator")
     implementation("io.quarkus:quarkus-rest-client-jsonb")
     implementation("io.quarkus:quarkus-rest-client")
     implementation("io.quarkus:quarkus-rest-jsonb")
     implementation("io.quarkus:quarkus-rest")
     implementation("io.quarkus:quarkus-smallrye-health")
+    implementation("io.quarkus:quarkus-arc")
+    implementation("io.quarkus:quarkus-container-image-jib")
     implementation("io.quarkus:quarkus-smallrye-openapi")
     implementation("io.quarkus:quarkus-logging-json")
 
-    compileOnly("org.projectlombok:lombok:1.18.30")
-    annotationProcessor("org.projectlombok:lombok:1.18.30")
-
-    implementation("com.github.davidmoten:predict4java:1.3.1")
-    implementation("org.apache.commons:commons-math3:3.6.1")
+    implementation("com.squareup.okhttp3:okhttp:4.11.0")
+    implementation("io.opentelemetry:opentelemetry-exporter-sender-grpc-managed-channel:1.28.0")
 
     implementation("io.quarkus:quarkus-opentelemetry")
+    implementation("io.quarkus:quarkus-micrometer-opentelemetry")
+
+    compileOnly("org.projectlombok:lombok:1.18.30")
+    annotationProcessor("org.projectlombok:lombok:1.18.30")
 }
 
 group = "de.qaware.cloudcomputing"
@@ -49,4 +50,11 @@ tasks.withType<Test> {
 tasks.withType<JavaCompile> {
     options.encoding = "UTF-8"
     options.compilerArgs.add("-parameters")
+}
+
+application {
+    applicationDefaultJvmArgs = listOf(
+        "--add-opens", "java.base/java.util=ALL-UNNAMED",
+        "--add-opens", "java.base/java.nio=ALL-UNNAMED",
+    )
 }
